--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -11,9 +11,6 @@ body {
 }
 
 #wrapper {
-    width: 480px;
-    margin: 0 auto;
-    text-align: center;
 }
 
 h1 {
@@ -22,12 +19,16 @@ h1 {
     letter-spacing: -3px;
     color: mix($green, #000, 70%);
     @include text-shadow(rgba(255,255,255,0.4) 0 1px, rgba(0,0,0,0.4) 0 -1px, rgba(255,255,255,0.5) 0 0 15px);
-    margin-bottom: 2em;
+    margin-bottom: 1em;
+    text-align: center;
 }
 
 
 section {
-    margin: 2em 0;
+    width: 33%;
+    @include float(left);
+    @include box-sizing(border-box);
+    padding: 0 1em;
     
     h1 {
         font-size: 36px;
