--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -12,6 +12,11 @@ body {
 
 #wrapper {
     @include clearfix;
+    
+    & > header {
+        text-align: center;
+        margin-bottom: 1em;
+    }
 }
 
 h1 {
@@ -20,10 +25,8 @@ h1 {
     letter-spacing: -3px;
     color: mix($green, #000, 70%);
     @include text-shadow(rgba(255,255,255,0.4) 0 1px, rgba(0,0,0,0.4) 0 -1px, rgba(255,255,255,0.5) 0 0 15px);
-    margin-bottom: 1em;
-    text-align: center;
+    margin-bottom: 0.2em;
 }
-
 
 section {
     width: 33%;
@@ -33,6 +36,7 @@ section {
     margin-bottom: 1em;
     
     h1 {
+        text-align: center;
         font-size: 36px;
         font-weight: bold;
         color: #FFF;
@@ -97,4 +101,11 @@ $selector: "";
 #{$selector} {
     content: "Yep!";
     background-color: $green;
+}
+
+footer {
+    font-size: 12px;
+    clear: both;
+    text-align: center;
+    line-height: 1.4;
 }
