--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -77,19 +77,23 @@ body {
   overflow: hidden;
   *zoom: 1;
 }
+/* line 16, ../sass/screen.scss */
+#wrapper > header {
+  text-align: center;
+  margin-bottom: 1em;
+}
 
-/* line 17, ../sass/screen.scss */
+/* line 22, ../sass/screen.scss */
 h1 {
   font-size: 48px;
   font-weight: bold;
   letter-spacing: -3px;
   color: #619615;
   text-shadow: rgba(255, 255, 255, 0.4) 0 1px, rgba(0, 0, 0, 0.4) 0 -1px, rgba(255, 255, 255, 0.5) 0 0 15px;
-  margin-bottom: 1em;
-  text-align: center;
+  margin-bottom: 0.2em;
 }
 
-/* line 28, ../sass/screen.scss */
+/* line 31, ../sass/screen.scss */
 section {
   width: 33%;
   display: inline;
@@ -101,28 +105,29 @@ section {
   padding: 0 1em;
   margin-bottom: 1em;
 }
-/* line 35, ../sass/screen.scss */
+/* line 38, ../sass/screen.scss */
 section h1 {
+  text-align: center;
   font-size: 36px;
   font-weight: bold;
   color: #FFF;
   text-shadow: rgba(0, 0, 0, 0.3) 0 1px, rgba(255, 255, 255, 0.8) 0 0 10px;
   margin-bottom: 0;
 }
-/* line 42, ../sass/screen.scss */
+/* line 46, ../sass/screen.scss */
 section h1:before, section h1:after {
   color: #c5eb8f;
 }
-/* line 46, ../sass/screen.scss */
+/* line 50, ../sass/screen.scss */
 section h1:before {
   content: "‹ ";
 }
-/* line 50, ../sass/screen.scss */
+/* line 54, ../sass/screen.scss */
 section h1:after {
   content: " ›";
 }
 
-/* line 56, ../sass/screen.scss */
+/* line 60, ../sass/screen.scss */
 table {
   width: 100%;
   margin-top: 1em;
@@ -139,22 +144,22 @@ table {
   box-shadow: rgba(0, 0, 0, 0.5) 0 1px 2px;
   color: #619615;
 }
-/* line 64, ../sass/screen.scss */
+/* line 68, ../sass/screen.scss */
 table td, table th {
   padding: 1em;
   border-bottom: 1px dotted #c5eb8f;
 }
-/* line 70, ../sass/screen.scss */
+/* line 74, ../sass/screen.scss */
 table tr:last-child td, table tr:last-child th {
   border-bottom: 0;
 }
-/* line 75, ../sass/screen.scss */
+/* line 79, ../sass/screen.scss */
 table .support {
   width: 64px;
   text-align: right;
   color: #FFF;
 }
-/* line 80, ../sass/screen.scss */
+/* line 84, ../sass/screen.scss */
 table .support:after {
   padding: 4px 8px;
   content: "Nope";
@@ -172,8 +177,16 @@ table .support:after {
   text-shadow: rgba(0, 0, 0, 0.3) 0 1px;
 }
 
-/* line 97, ../sass/screen.scss */
+/* line 101, ../sass/screen.scss */
 html.fontface .feature.fontface .support:after, html.backgroundsize .feature.backgroundsize .support:after, html.borderimage .feature.borderimage .support:after, html.borderradius .feature.borderradius .support:after, html.boxshadow .feature.boxshadow .support:after, html.flexbox .feature.flexbox .support:after, html.hsla .feature.hsla .support:after, html.multiplebgs .feature.multiplebgs .support:after, html.opacity .feature.opacity .support:after, html.rgba .feature.rgba .support:after, html.textshadow .feature.textshadow .support:after, html.cssanimations .feature.cssanimations .support:after, html.csscolumns .feature.csscolumns .support:after, html.cssgradients .feature.cssgradients .support:after, html.cssreflections .feature.cssreflections .support:after, html.csstransforms .feature.csstransforms .support:after, html.csstransforms3d .feature.csstransforms3d .support:after, html.csstransitions .feature.csstransitions .support:after, html.applicationcache .feature.applicationcache .support:after, html.canvas .feature.canvas .support:after, html.canvastext .feature.canvastext .support:after, html.draganddrop .feature.draganddrop .support:after, html.hashchange .feature.hashchange .support:after, html.history .feature.history .support:after, html.audio .feature.audio .support:after, html.video .feature.video .support:after, html.indexeddb .feature.indexeddb .support:after, html.localstorage .feature.localstorage .support:after, html.postmessage .feature.postmessage .support:after, html.sessionstorage .feature.sessionstorage .support:after, html.websockets .feature.websockets .support:after, html.websqldatabase .feature.websqldatabase .support:after, html.webworkers .feature.webworkers .support:after, html.geolocation .feature.geolocation .support:after, html.inlinesvg .feature.inlinesvg .support:after, html.smil .feature.smil .support:after, html.svg .feature.svg .support:after, html.svgclippaths .feature.svgclippaths .support:after, html.touch .feature.touch .support:after, html.webgl .feature.webgl .support:after {
   content: "Yep!";
   background-color: #8bd71f;
+}
+
+/* line 106, ../sass/screen.scss */
+footer {
+  font-size: 12px;
+  clear: both;
+  text-align: center;
+  line-height: 1.4;
 }
