--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -145,3 +145,10 @@ footer {
 #useragent {
     margin-bottom: 1em;
 }
+
+#github-ribbon {
+    position: absolute;
+    top: 0;
+    right: 0;
+    border: 0;
+}
