--- a/stylesheets/mobile.css
+++ b/stylesheets/mobile.css
@@ -1,1 +1,1 @@
-section{width:100%;display:inline;float:none}
+body{padding:24px 16px}section{width:100%;display:inline;float:none}h1{font-size:32px;letter-spacing:-2px}#github-ribbon{display:none}
