Add social badges.

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -151,6 +151,10 @@ footer {
     margin-bottom: 1em;
 }
 
+#social {
+    margin-top: 1em;
+}
+
 #github-ribbon {
     position: absolute;
     top: 0;
