--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -6,6 +6,8 @@ $light-green: mix($green, #FFF);
 $even-lighter-green: mix($green, #FFF, 30%);
 $dark-green: mix($green, #000, 70%);
 $even-darker-green: mix($green, #000);
+$red: #C00;
+$yellow: #CC0;
 $white-kinda: #FEFFEB;
 //$noise: url("http://noisepng.com/64-90-4.png");
 $noise: image-url("noise.png");
@@ -120,7 +122,7 @@ section {
             display: block;
             content: " ";
             @include background(linear-gradient(top, rgba(255,255,255,0.3), rgba(255,255,255,0)));
-            background-color: #C00;
+            background-color: $red;
             border: 1px solid rgba(0,0,0,0.1);
             @include border-radius(9px);
             @include text-shadow(rgba(0,0,0,0.3) 0 1px);
@@ -129,14 +131,36 @@ section {
     }
 }
 
-$selector: "";
-@each $feature in /* FEATURES START */fontface, backgroundsize, borderimage, borderradius, boxshadow, flexbox, generatedcontent, hsla, multiplebgs, opacity, rgba, textshadow, cssanimations, csscolumns, cssgradients, cssreflections, csstransforms, csstransforms3d, csstransitions, applicationcache, canvas, canvastext, draganddrop, hashchange, history, audio, video, indexeddb, localstorage, postmessage, sessionstorage, websockets, websqldatabase, webworkers, inputtypes-search, inputtypes-tel, inputtypes-url, inputtypes-email, inputtypes-datetime, inputtypes-date, inputtypes-month, inputtypes-week, inputtypes-datetime-local, inputtypes-number, inputtypes-range, inputtypes-color, input-autocomplete, input-autofocus, input-list, input-placeholder, input-max, input-min, input-multiple, input-pattern, input-required, input-step, geolocation, inlinesvg, smil, svg, svgclippaths, touch, webgl/* FEATURES END */ {
-
-    $selector: "#{$selector} html.#{$feature} .feature.#{$feature} .support:after,";
+.subfeatures {
+    margin-bottom: 0.5em;
+    
+    li {
+        font-size: 80%;
+        border: 0;
+        padding-right: 0;
+        
+        .support {
+            padding-right: 0;
+        }
+    }
 }
 
-#{$selector} {
+$yesSelector: "";
+$noSelector: "";
+$maybeSelector: "";
+@each $feature in /* FEATURES START */fontface, backgroundsize, borderimage, borderradius, boxshadow, flexbox, generatedcontent, hsla, multiplebgs, opacity, rgba, textshadow, cssanimations, csscolumns, cssgradients, cssreflections, csstransforms, csstransforms3d, csstransitions, applicationcache, canvas, canvastext, draganddrop, hashchange, history, audio, audio-mp3, audio-wav, audio-m4a, audio-ogg, video, video-h264, video-ogg, video-webm, indexeddb, localstorage, postmessage, sessionstorage, websockets, websqldatabase, webworkers, inputtypes-search, inputtypes-tel, inputtypes-url, inputtypes-email, inputtypes-datetime, inputtypes-date, inputtypes-month, inputtypes-week, inputtypes-datetime-local, inputtypes-number, inputtypes-range, inputtypes-color, input-autocomplete, input-autofocus, input-list, input-placeholder, input-max, input-min, input-multiple, input-pattern, input-required, input-step, geolocation, inlinesvg, smil, svg, svgclippaths, touch, webgl/* FEATURES END */ {
+
+    $yesSelector: "#{$yesSelector} html.#{$feature} .feature.#{$feature} > .support:after,";
+    $noSelector: "#{$noSelector} html.no-#{$feature} .feature.#{$feature} > .support:after,";
+    $maybeSelector: "#{$maybeSelector} html.maybe-#{$feature} .feature.#{$feature} > .support:after,";
+}
+
+#{$yesSelector} {
     background-color: $green;
+}
+
+#{$maybeSelector} {
+    background-color: $yellow;
 }
 
 footer {
