Add spec URLs for CSS features.

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -20,6 +20,11 @@ body {
     padding: 48px;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
 #wrapper {
     @include clearfix;
     
