Exclude IE7 due to lack of support for generated content (http://caniuse.com/css-gencontent).

--- a/sass/mobile.scss
+++ b/sass/mobile.scss
@@ -10,8 +10,9 @@ h1 {
     margin-bottom: 0.5em;
 }
 
-section {
+.group {
     width: 100%;
+    padding: 0;
     @include float(none);
     
     h1 {
